Update Netlify configuration for SvelteKit routing

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,17 @@
 [build.environment]
   NODE_VERSION = "18"
 
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
+
 # Firebase 환경 변수들은 Netlify의 환경 변수 설정에서 관리하는 것이 좋습니다 
