--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 	"dependencies": {
 		"@types/better-sqlite3": "^7.6.13",
 		"better-sqlite3": "^11.9.1",
-		"firebase": "^11.6.1"
+		"firebase": "^11.6.1",
+		"pdf-lib": "^1.17.1",
+		"pdfjs-dist": "^5.1.91"
 	}
 }
